modify footer css

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   margin: 0px auto;
   text-align: center;
   font-size: 0.8em;
-  color: #24292f;
+  color: #ccc;
   position: absolute;
   width: 100%;
   bottom:0;
